one typo ruined it

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: ReportUI
-main: GamingSnail7410\ReportUi\Main
+main: GamingSnail7410\ReportUI\Main
 author: TheGamingSnail
 api: 3.0.0
 version: 1.0
